apps/workloads/k8s-landing-page/patches/mizuki/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-landing-page
spec:
  template:
    spec:
      containers:
      - name: k8s-landing-page
