apps/workloads/k8s-landing-page/patches/mizuki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-landing-page
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello.mizuki.otaprv.ishiori.net
      secretName: wild-mizuki-otaprv-ishiori-net-tls-secret
  rules:
    - host: hello.mizuki.otaprv.ishiori.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-landing-page
                port:
                  number: 2434
